--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,35 +1,76 @@
-.leftS {
+#Box1 {
     background-color: lightgrey;
-    height: 500px;
-    margin-right: 15px;
-    border: dotted red 3px;
 }
 
-.rightS {
+#Box2 {
+    /*Your Guess*/
+    background-color: lightblue;
+    text-transform: uppercase;
+    padding: 5px 5px 5px 0px;
+    text-align: center
+    border: solid black 1px;
+}
+
+#Box3 {
+    /*secret word*/
     background-color: lightgrey;
-    height: 500px;
-    border: dotted red 3px;
+    font-weight: bold;
+    height: 30px;
+    padding: 5px 5px 5px 0px;
+    text-transform: uppercase;
+    text-align: center;
+    border: solid black 2px;
+}
+
+#Box4 {
+    /*Hint*/
+    background-color: lightblue;
+    font-weight: italic;
+    padding: 5px 5px 5px 0px;
+}
+
+#Box5 {
+    /*Guess Remaining*/
+    background-color: lightblue;
+    padding: 5px 5px 5px 0px;
+}
+
+#Box6 {
+    background-color: lightyellow;
+    padding: 4.5%;
+}
+
+#RSbutton {
+    width: 300px;
+    height: 40px;
+    font-size: 30px;
+    float:right;
+}
+
+
+
+.container-fluid {
+    background-color: grey;
+}
+
+h1 {
+    background-color: #39CCCC;
 }
 
 body {
-    background-color: black;
+    background-color: grey;
 }
 
-html {
-    background-color: black;
+.header{
+    margin-top:1px;
+    margin-bottom:5px;
+    border:grey solid 1px;
 }
 
-#titleH {
-    font-family: 'Gloria Hallelujah', cursive;
-}
-
-img {
-    float: right;
-    height:225px;
-    width:835px;
-    position: 0px;
-}
-
-#answer{
-    background-color:white;
+html { 
+background: url(bar.png) no-repeat center center fixed; 
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
 }
